kubernetes/mysql-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
     name: mysql-deployment
     namespace: bookstore


spec:
    replicas: 1

    selector:
        matchLabels:
            app: mysql

    template:
        metadata:
           labels:
             app: mysql

        spec:
          containers:
             - name: mysql
               image: mysql:8.0  
               volumeMounts:
                   - name: mysql-storage
                     mountPath: /var/lib/mysql

               imagePullPolicy: IfNotPresent
               ports:
                 - containerPort: 3306
          volumes:
              - name: mysql-storage
                persistentVolumeClaim:
                 claimName: pvc
