kubernetes/mysql-service.yml
apiVersion: v1

kind: Service

metadata:
     name: mysql-service
     namespace: bookstore
spec:
     selector:
         app: mysql

     ports:
       -  port: 3306
          targetPort: 3306
