kubernetes/service.yml
apiVersion: v1

kind: Service

metadata:
     name: bookstore-service
     namespace: bookstore
spec:
     selector:
         app: bookstore

     ports:
       - protocol: TCP
         port: 80
         targetPort: 5000

     type: NodePort
