kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata: 
  name: bookstore-ingress
  namespace: bookstore

spec:
  rules:
     - host: bookstore.local
       http:
         paths:
          -  path: /  
             pathType: Prefix
             backend: 
              service:
                name:  bookstore-service
                port:
                  number: 5000
